# sentinel-detect

./: README.md
api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
api/.github/workflows/: ci.yml
api/docs/: architecture.md
api/migrations/: env.py
api/migrations/versions/: 35d14654eed0_initial_schema.py
api/src/sentinel_detect/: __init__.py  main.py
api/src/sentinel_detect/alerts/: __init__.py  email_channel.py  factory.py  resources.py  rest_channel.py  webhook_channel.py  websocket_channel.py
api/src/sentinel_detect/api/: __init__.py
api/src/sentinel_detect/api/dependencies/: __init__.py  alerts.py  auth.py  config.py  database.py  detection.py  pipeline.py  streaming.py
api/src/sentinel_detect/api/routers/: __init__.py  alerts.py  auth.py  cameras.py  config.py  detect.py  detections.py  events.py  health.py  metrics.py  stream.py  websocket.py
api/src/sentinel_detect/api/schemas/: __init__.py  auth.py  camera.py  detection.py  events.py  health.py  stream.py  tracking.py
api/src/sentinel_detect/config/: __init__.py  settings.py
api/src/sentinel_detect/core/: __init__.py  exceptions.py  registry.py
api/src/sentinel_detect/core/entities/: __init__.py  alert.py  camera.py  configuration.py  detection.py  event.py  geometry.py  media.py  tracking.py  user.py
api/src/sentinel_detect/core/interfaces/: __init__.py  alert_channel.py  detector.py  event_rule.py  model.py  repository.py  storage.py  tracker.py  video_source.py
api/src/sentinel_detect/database/: __init__.py  base.py  engine.py  types.py
api/src/sentinel_detect/database/models/: __init__.py  alert.py  camera.py  configuration.py  detection.py  event.py  user.py
api/src/sentinel_detect/database/repositories/: __init__.py  alert_repository.py  camera_repository.py  configuration_repository.py  detection_repository.py  event_repository.py  user_repository.py
api/src/sentinel_detect/detectors/: __init__.py  animal.py  base.py  factory.py  fire.py  person.py  ppe.py  smoke.py  vehicle.py  weapon.py
api/src/sentinel_detect/events/: __init__.py  base.py  crowd.py  detected.py  factory.py  loitering.py  object_state.py  regions.py
api/src/sentinel_detect/models/: __init__.py  caching.py  manager.py  yolo.py
api/src/sentinel_detect/security/: __init__.py  passwords.py  rate_limit.py  tokens.py
api/src/sentinel_detect/services/: __init__.py  alert_engine.py  detection_service.py  event_engine.py  pipeline_service.py  tracking_service.py
api/src/sentinel_detect/storage/: __init__.py
api/src/sentinel_detect/streaming/: __init__.py  broadcaster.py  directory_source.py  factory.py  opencv_source.py  stream_manager.py
api/src/sentinel_detect/tracking/: __init__.py  byte_track.py  factory.py  kalman_filter.py  track.py
api/src/sentinel_detect/utils/: __init__.py  logging.py  metrics.py
api/tests/integration/: _auth_helpers.py  test_alerts_api.py  test_auth_api.py  test_cameras_api.py  test_cors.py  test_detect_image_live.py  test_detect_video.py  test_events_detections_config_api.py  test_health.py  test_lifespan.py  test_metrics_api.py  test_stream_api.py
api/tests/unit/: test_alert_engine.py  test_alerts_factory.py  test_auth_dependency.py  test_byte_tracker.py  test_caching_model.py  test_database_engine.py  test_database_repositories.py  test_detector_factory.py  test_detectors.py  test_directory_source.py  test_email_channel.py  test_entities.py  test_event_rules.py  test_kalman_filter.py  test_model_manager.py  test_opencv_source.py  test_passwords.py  test_rate_limit.py  test_region_entity.py  test_registry.py  test_rest_channel.py  test_settings.py  test_stream_broadcaster.py  test_stream_manager.py  test_streaming_factory.py  test_tokens.py  test_tracking_service.py  test_webhook_channel.py  test_websocket_channel.py
client/: .env.local.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
client/src/app/: globals.css  layout.tsx
client/src/app/(console)/: layout.tsx  page.tsx
client/src/app/(console)/alerts/: page.tsx
client/src/app/(console)/cameras/: page.tsx
client/src/app/(console)/cameras/[id]/: page.tsx
client/src/app/(console)/cameras/[id]/live/: page.tsx
client/src/app/(console)/cameras/new/: page.tsx
client/src/app/(console)/config/: page.tsx
client/src/app/(console)/detect/: page.tsx
client/src/app/(console)/events/: page.tsx
client/src/app/login/: page.tsx
client/src/components/detect/: BoundingBoxOverlay.tsx  Dropzone.tsx  ScanSweep.tsx
client/src/components/layout/: ClassificationBar.tsx  RequireAuth.tsx  SideNav.tsx  SiteHeader.tsx
client/src/components/stream/: TrackRadar.tsx
client/src/components/ui/: Button.tsx  ConfidenceGauge.tsx  DecodeText.tsx  StatReadout.tsx  StatusDot.tsx  TerminalPanel.tsx
client/src/lib/: api.ts  auth-context.tsx  types.ts  useStreamSocket.ts  utils.ts
